.metadata/.plugins/org.eclipse.cdt.ui/3_gpio_bsrr.build.log
15:09:26 **** Build of configuration Debug for project 3_gpio_bsrr ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DSTM32F446xx -c -I../Inc -I"D:/STM32_bare_metal_project/CHIP_headers/CMSIS/Device/ST/STM32F4xx/cmsis-device-f4/cmsis-device-f4-cdbad761857acedcdd07ece7939b4cb209ed826a/Include" -I"D:/STM32_bare_metal_project/CHIP_headers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:15:31: error: unknown type name 'UART_TypeDef'; did you mean 'USART_TypeDef'?
   15 | static void uart_set_baudrate(UART_TypeDef *USARTx,uint32_t PeriphClk, uint32_t Baudrate);
      |                               ^~~~~~~~~~~~
      |                               USART_TypeDef
../Src/main.c: In function 'uart2_tx_init':
../Src/main.c:49:9: warning: implicit declaration of function 'uart_set_baudrate' [-Wimplicit-function-declaration]
   49 |         uart_set_baudrate(UART2,APBQ_CLK, UART_BAURDRATE);
      |         ^~~~~~~~~~~~~~~~~
../Src/main.c:49:27: error: 'UART2' undeclared (first use in this function); did you mean 'UART4'?
   49 |         uart_set_baudrate(UART2,APBQ_CLK, UART_BAURDRATE);
      |                           ^~~~~
      |                           UART4
../Src/main.c:49:27: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c: At top level:
../Src/main.c:68:31: error: unknown type name 'UART_TypeDef'; did you mean 'USART_TypeDef'?
   68 | static void uart_set_baudrate(UART_TypeDef *USARTx,uint32_t PeriphClk, uint32_t Baudrate)
      |                               ^~~~~~~~~~~~
      |                               USART_TypeDef
../Src/main.c:73:17: warning: 'compute_uart_bd' defined but not used [-Wunused-function]
   73 | static uint16_t compute_uart_bd(uint32_t PeriphClk, uint32_t Baudrate)
      |                 ^~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:09:27 Build Failed. 4 errors, 2 warnings. (took 1s.542ms)

